--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "phpactor/container": "^2.0",
         "doctrine/orm": "^2.14",
         "slim/slim": "^4.11",
-        "ramsey/uuid-doctrine": "^2.0"
+        "ramsey/uuid-doctrine": "^2.0",
+        "symfony/cache": "^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
