--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,25 @@
         "doctrine/orm": "^2.14",
         "slim/slim": "^4.11",
         "ramsey/uuid-doctrine": "^2.0",
-        "symfony/cache": "^6.2"
+        "symfony/cache": "^6.2",
+        "laminas/laminas-diactoros": "^2.24"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "phpstan/phpstan": "^1.9",
-        "friendsofphp/php-cs-fixer": "^3.13"
+        "friendsofphp/php-cs-fixer": "^3.13",
+        "symfony/var-dumper": "^6.2"
     },
     "license": "MIT",
     "autoload": {
         "psr-4": {
             "Activities\\": "src/",
             "DTL\\OpenApi\\": "packages/open-api"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Activities\\Tests\\": "tests/"
         }
     },
     "authors": [
