--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "slim/slim": "^4.11",
         "ramsey/uuid-doctrine": "^2.0",
         "symfony/cache": "^6.2",
-        "laminas/laminas-diactoros": "^2.24"
+        "laminas/laminas-diactoros": "^2.24",
+        "psr/http-client": "^1.0",
+        "cuyz/valinor": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -20,7 +22,7 @@
     "autoload": {
         "psr-4": {
             "Activities\\": "src/",
-            "DTL\\OpenApi\\": "packages/open-api"
+            "DTL\\OpenApi\\": "packages/open-api/"
         }
     },
     "autoload-dev": {
