--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
         "symfony/cache": "^6.2",
         "laminas/laminas-diactoros": "^2.24",
         "psr/http-client": "^1.0",
-        "cuyz/valinor": "^1.2"
+        "cuyz/valinor": "^1.2",
+        "symfony/serializer": "^6.2",
+        "symfony/property-access": "^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "phpstan/phpstan": "^1.9",
         "friendsofphp/php-cs-fixer": "^3.13",
-        "symfony/var-dumper": "^6.2",
-        "symfony/serializer": "^6.2",
-        "symfony/property-access": "^6.2"
+        "symfony/var-dumper": "^6.2"
     },
     "license": "MIT",
     "autoload": {
