--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "psr/http-client": "^1.0",
         "cuyz/valinor": "^1.2",
         "symfony/serializer": "^6.2",
-        "symfony/property-access": "^6.2"
+        "symfony/property-access": "^6.2",
+        "league/oauth2-server": "^8.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
